@@ -1,6 +1,11 @@
 2011-01-31  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/47042
+	* gfortran.dg/stmt_func_1.f90: New.
+
+2011-01-31  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/47042
 	* gfortran.dg/interface_34.f90: New.
 
 2011-01-30  Paul Thomas  <pault@gcc.gnu.org>
